adding docs